# web3-rpc-pool

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  perf.yml
benches/: pool_benchmarks.rs  strategy_benchmarks.rs
perf-results/: .gitkeep  baseline_v0.1.0.md
scripts/: run_perf_tests.sh
src/: endpoint.rs  error.rs  lib.rs  metrics.rs  pool.rs  presets.rs  tiered.rs  ws.rs
src/strategies/: failover.rs  latency_based.rs  mod.rs  rate_aware.rs  round_robin.rs
tests/: capability_tests.rs  live_endpoint_tests.rs  perf_tests.rs
