[package]
name = "web3-rpc-pool"
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "High-availability multi-endpoint RPC pool with automatic failover and load balancing for Web3 applications"
repository = "https://github.com/sunoj/web3-rpc-pool"
keywords = ["web3", "rpc", "ethereum", "failover", "load-balancing"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["http", "ws"]
http = []
ws = ["alloy/provider-ws", "alloy/rpc-types"]
metrics = ["prometheus"]
evaluator = ["dep:reqwest", "dep:clap", "dep:chrono"]
live-tests = ["dep:reqwest"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Alloy for RPC
alloy = { version = "1.0", default-features = false, features = ["providers", "transports", "rpc-client", "transport-http", "reqwest"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
parking_lot = "0.12"
url = "2"
futures-util = "0.3"

# Logging
tracing = "0.1"

# Optional: Metrics
prometheus = { version = "0.13", optional = true }

# Error handling
thiserror = "2"

# Optional: RPC evaluator binary
reqwest = { version = "0.12", features = ["json"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
rand = "0.8"
wiremock = "0.6"

[[bin]]
name = "rpc-evaluator"
path = "src/bin/rpc_evaluator.rs"
required-features = ["evaluator"]

[[bench]]
name = "pool_benchmarks"
harness = false

[[bench]]
name = "strategy_benchmarks"
harness = false
